tests/tools/import/GTFS/mapping/invalid_timing/options.tools
-n net.net.xml --merged-csv data.csv --vtype-output vehtypes.xml --modes bus
tools/import/gtfs/gtfs2pt.py
